# jupyterlite-webr-kernel

./: .eslintrc.js  .gitignore  .prettierignore  .yarnrc.yml  LICENSE  MANIFEST.in  README.md  config.json  environment.yml  install.json  jupyter-lite.json.example  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json  webpack.config.js
.github/workflows/: build.yml
src/: index.ts  webr_kernel.ts
